apps/affine/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-affine
  labels:
    istio-injection: enabled
