apps/affine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-app
  namespace: apps-affine
spec:
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine:stable
          resources:
            requests:
              cpu: 256m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
