apps/affine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-svc
  namespace: apps-affine
spec:
  selector:
    app: affine
  ports:
    - port: 80
      targetPort: 3010
